# model-orchestration-experiments

./: .gitignore  README.md  main.py  pyproject.toml
model_orchestration_experiments/: simple_chat_completion.py  simple_document_extraction_and_analysis.py
model_orchestration_experiments/utils/: __init__.py
