[project]
name = "semantic-kernel-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Laurentiu Diaconu",email = "ldiaconu@chathamfinancial.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "semantic-kernel (>=1.25.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "asyncio (>=3.4.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
